# opentrack

./: README.md  THREE_MODULE_SPLIT_PLAN.md  opentrack.code-workspace
.github/workflows/: cmake.yml
api/: plugin-api.cpp  plugin-api.hpp
filter-alpha-spectrum/: CMakeLists.txt  REFACTOR_PLAN.md  alpha-spectrum-governance.hpp  alpha-spectrum-presets.qrc  alpha-spectrum-settings.hpp  alpha_spectrum_governance.qrc  ftnoir_alpha_spectrum_filtercontrols.ui  ftnoir_filter_alpha_spectrum.cpp  ftnoir_filter_alpha_spectrum.h  ftnoir_filter_alpha_spectrum_dialog.cpp
filter-alpha-spectrum/governance/: feature-whitelist.yaml
filter-alpha-spectrum/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
filter-alpha-spectrum/presets/: brownian-ensemble.yaml  ema-foundation.yaml  full-ensemble.yaml
logic/: pipeline.cpp  pipeline.hpp  runtime-libraries.cpp  runtime-libraries.hpp  tracklogger.cpp  tracklogger.hpp  work.cpp  work.hpp
opentrack/: main-window.cpp
proto-experiment-csv/: CMakeLists.txt  experiment_csv.cpp  experiment_csv.hpp
proto-experiment-csv/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
tracker-fusion/: fusion.cpp  fusion.h
tracker-fusion/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
tracker-openhmd/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
tracker-synthetic/: CMakeLists.txt  README.md  synthetic.cpp  synthetic.h  synthetic.ui  synthetic_dialog.cpp
tracker-synthetic-b/: CMakeLists.txt
tracker-synthetic/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
